test/data/syntax-errors/functioncall-missing-paren.ava
var thisFunction = function () -> return 0; end;

thisFunction);